feat(gui): 设置页可改镜像域名 (domain 运行时注入, 不再编译期写死)
- src/net.h: 声明 g_api_domain + init_api_domain()
- src/wnacg.c: 定义 g_api_domain, main 从 WNACG_DOMAIN 环境变量读取(空则用
  编译期 DEFAULT_API_DOMAIN), 所有 URL 拼接改用语域变量; webp_bmp.c referer 同步
- MainActivity: SharedPreferences 存 domain(默认 www.wn09.shop); 命令栏加「设置」
  按钮弹对话框输入保存; 顶部 domain_bar 显示当前镜像; execNative/fetchCover 改用
  ProcessBuilder 注入 WNACG_DOMAIN 环境变量 (Runtime.exec 无法传 env)
- strings/layout: 设置按钮 + 对话框文案 + domain 显示条